exports[`Profile component snapshot render all data 1`] = `
<section>
  <dl>
    <dt>
      Profile Image
    </dt>
    <dd>
      <img
        alt="Personal Profile"
        src="http://linkToImage" />
    </dd>
    <dt>
      Email
    </dt>
    <dd>
      test@email.com
    </dd>
    <dt>
      First Name
    </dt>
    <dd>
      John
    </dd>
    <dt>
      Last Name
    </dt>
    <dd>
      Doe
    </dd>
    <dt>
      Bio
    </dt>
    <dd>
      My bio
    </dd>
  </dl>
  <a
    onClick={[Function]}
    style={Object {}}>
    Edit Profile
  </a>
</section>
`;

exports[`Profile component snapshot render only required email 1`] = `
<section>
  <dl>
    <dt>
      Email
    </dt>
    <dd>
      test@email.com
    </dd>
  </dl>
  <a
    onClick={[Function]}
    style={Object {}}>
    Edit Profile
  </a>
</section>
`;
